tests/snapshots/parser__bracket_access__chained_indices.snap
---
source: tests/parser.rs
expression: "parse(\"xs[0][1]\")"
---
Ok(
    [
        Expr(
            Index {
                recv: Index {
                    recv: Identifier(
                        "xs",
                        Span {
                            start: 0,
                            end: 2,
                        },
                    ),
                    key: Int(
                        0,
                        Span {
                            start: 3,
                            end: 4,
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
                key: Int(
                    1,
                    Span {
                        start: 6,
                        end: 7,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 8,
                },
            },
        ),
    ],
)
