tests/snapshots/parser__bracket_access__chained_with_member.snap
---
source: tests/parser.rs
expression: "parse(\"u.tags[1].name\")"
---
Ok(
    [
        Expr(
            Member {
                recv: Index {
                    recv: Member {
                        recv: Identifier(
                            "u",
                            Span {
                                start: 0,
                                end: 1,
                            },
                        ),
                        field: "tags",
                        span: Span {
                            start: 0,
                            end: 6,
                        },
                    },
                    key: Int(
                        1,
                        Span {
                            start: 7,
                            end: 8,
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                },
                field: "name",
                span: Span {
                    start: 0,
                    end: 14,
                },
            },
        ),
    ],
)
