tests/snapshots/parser__bracket_access__empty_brackets_is_error.snap
---
source: tests/parser.rs
expression: "parse(\"xs[]\")"
---
Err(
    ParseError {
        message: "expected expression after `[`, found CBracket",
        span: Span {
            start: 3,
            end: 4,
        },
    },
)
