tests/snapshots/parser__bracket_access__int_key.snap
---
source: tests/parser.rs
expression: "parse(\"xs[0]\")"
---
Ok(
    [
        Expr(
            Index {
                recv: Identifier(
                    "xs",
                    Span {
                        start: 0,
                        end: 2,
                    },
                ),
                key: Int(
                    0,
                    Span {
                        start: 3,
                        end: 4,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 5,
                },
            },
        ),
    ],
)
