tests/snapshots/parser__bracket_access__unclosed_is_error.snap
---
source: tests/parser.rs
expression: "parse(\"xs[1\")"
---
Err(
    ParseError {
        message: "expected `]` after expression, found Eof",
        span: Span {
            start: 4,
            end: 4,
        },
    },
)
